--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Калькулятор</title>
-    <link rel="stylesheet" href="/calc/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
             <span class="operator">x</span>
         </div>
     </div>
-    <script src="/calc/js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
